# Simple-calculator

./: README.md  calc.c
calculator_tom/: CMakeLists.txt  calculate.cpp  calculate.h  conversion.cpp  conversion.h  main.cpp  polynomial.cpp  polynomial.h  stack.cpp  stack.h
